subprojects {
    apply plugin: 'java'

    group = 'com.gigachat.unit.tests.generator'
    version = '0.1.0'

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }
}
